# externalhacktemplate

./: CMakeLists.txt
src/: main.cpp
